--- a/eda/eda/templates/eda/base.html
+++ b/eda/eda/templates/eda/base.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}EDA Automation{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'eda/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'eda/eda.css' %}">
 
     {% block extra_head %}{% endblock %}
 
@@ -18,7 +19,13 @@
   <body>
 
     <div class="container-fluid"> 
+
+    <div class="sticky-top">
+    <div class="striped"></div>
+    </div>
+
     {% block content %}{% endblock %}
+
     </div>
 
     <script src="{% static 'eda/bootstrap.bundle.js' %}"></script>
