--- a/eda/tower_database/templates/tower_database/index.html
+++ b/eda/tower_database/templates/tower_database/index.html
@@ -31,7 +31,16 @@
 		<li><a href="{% url 'bells_list' %}">Towers rung full-circle, by number of bells</a></li>
 		<li><a href="{% url 'un_bells_list' %}">Towewrs not rung full-circle, by number of bells</a></li>
 		<li><a href="{% url 'practice_night_list' %}">Towers by practice night</a></li>
+
+	</ul>
+
+	<h3>Reusing this data</h3>
+
+	<p>This information is designed to be reused. All the pages above can be 'embedded' (by <i>iframe</i>) in other web sites (such as Google Sites ones) - see here for an <a href="https://www.elyda.org.uk/towers-and-bells/new-list">example on the Association Web Site</a>. The data can also be exported as Comma-Separated Values (CSV) which can be imported into spreadsheets for further analysis, and as <a href="https://en.wikipedia.org/wiki/GeoJSON">GeoJSON</a> which can be processed by Geographic Information Systems (GISs) and web mapping systems (this is how the maps above are created).</p>
+
+	<ul>
 		<li>CSV exports: <a href="{% url 'towers_csv' %}">Towers</a>, <a href="{% url 'contacts_csv' %}">Contacts</a>, <a href="{% url 'websites_csv' %}">Websites</a>, <a href="{% url 'photos_csv' %}">Photos</a></li>
-		<li><a href="https://en.wikipedia.org/wiki/GeoJSON">GeoJSON</a> exports: <a href="{% url 'towers_geojson' %}">all towers</a>, <a href="{% url 'district_geojson' district='C' %}">just Cambridge</a>, <a href="{% url 'district_geojson' district='E' %}">just Ely</a>, <a href="{% url 'district_geojson' district='H' %}">just Huntingdon</a>, <a href="{% url 'district_geojson' district='W' %}">just Wisbech</a>,</li>
+		
+		<li>GeoJSON: <a href="{% url 'towers_geojson' %}">all towers</a>, <a href="{% url 'district_geojson' district='C' %}">just Cambridge</a>, <a href="{% url 'district_geojson' district='E' %}">just Ely</a>, <a href="{% url 'district_geojson' district='H' %}">just Huntingdon</a>, <a href="{% url 'district_geojson' district='W' %}">just Wisbech</a>,</li>
 	</ul>
 
