Add 'button' tower listing; tidy URLs

--- a/eda/eda/templates/eda/base.html
+++ b/eda/eda/templates/eda/base.html
@@ -18,13 +18,13 @@
 
   <body>
 
-    <div class="container-fluid"> 
+    <div class="col-lg-10 mx-auto px-4">
 
-    <div class="sticky-top">
-    <div class="striped"></div>
-    </div>
+      <div class="sticky-top">
+         <div class="striped"></div>
+      </div>
 
-    {% block content %}{% endblock %}
+      {% block content %}{% endblock %}
 
     </div>
 
