--- a/eda/tower_database/templates/tower_database/tower_list.html
+++ b/eda/tower_database/templates/tower_database/tower_list.html
@@ -25,7 +25,7 @@
 
 <h1>{{ title }}</h1>
 
-<p>We believe our lists include all towers with 3 or more bells within the area of the Diocese of Ely<br>(not all of which owned and maintained by the Diocese itself). This list can be searched, filtered<br>and sorted.</p>
+<p>We believe our lists include all towers with 3 or more bells within the area of the Diocese of Ely (not all of which owned and maintained by the Diocese itself). This list can be searched, filtered and sorted.</p>
 
 {% if notes %}
 <p>{{ notes }}</p>
