--- a/eda/tower_database/templates/tower_database/practice_list.html
+++ b/eda/tower_database/templates/tower_database/practice_list.html
@@ -25,7 +25,7 @@
 
 <h1>{{ title }}</h1>
 
-<p>We believe our listsWe include all towers with 3 or more bells within the area of<br>
+<p>We believe our listsWe include all towers with 3 or more bells within the area of 
 the Diocese of Ely (not all of which owned and maintained by the Diocese itself).</p>
 
     <table id="tower_table" class="table table-responsive table-sm">
